# dotenv-compare

./: .env  .gitignore  Cargo.toml  README.md  justfile  summary.csv
implementation/ruby-2.7.5/: Gemfile  main
implementation/rust-0.14.1/: Cargo.toml
implementation/rust-0.14.1/src/: main.rs
report/: ruby-2.7.json  rust-0.14.json
src/: common.rs  dir.rs  error.rs  implementation.rs  language.rs  main.rs  opt.rs  path.rs  report.rs  testing_procedure_specification_report.rs
