[package]
name    = "dotenv-compare"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"

[dependencies]
log               = "0.4"
pretty_env_logger = "0.3"
serde             = { version = "1.0.99", features = ["derive"] }
serde_json        = "1"
structopt         = "0.3"
semver            = { version = "0.9.0", features = ["serde"] }
csv = "1.1.1"
